force-app/main/default/objects/OpportunityLineItem/fields/DRC_NBC_Packing_Qauntity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Packing_Qauntity__c</fullName>
    <label>DRC NBC Packing Qauntity</label>
    <length>255</length>
    <translateData>false</translateData>
    <type>Text</type>
</CustomField>