force-app/main/default/objects/OpportunityLineItem/fields/DRC_NBC_Unit_Of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Unit_Of_Measurement__c</fullName>
    <label>DRC NBC Unit Of Measurement</label>
    <length>255</length>
    <translateData>false</translateData>
    <type>Text</type>
</CustomField>